# curso-python-fundamental-axity

./: .gitignore  README.md
modulo-entorno-herramientas/contenido/: README.md
modulo-entorno-herramientas/laboratorio/: .pre-commit-config.yaml  INSTRUCCIONES_INSTALACION.md  README.md  codigo_corregido.py  codigo_malo.py  pyproject.toml
modulo-fastapi-apis/contenido/: README.md
modulo-fastapi-apis/laboratorio/: .env.example  README.md  pyproject.toml
modulo-fastapi-apis/laboratorio/app/: config.py  database.py  dependencies.py  main.py
modulo-fastapi-apis/laboratorio/app/models/: __init__.py  order.py  user.py
modulo-fastapi-apis/laboratorio/app/routers/: __init__.py  auth.py  orders.py
modulo-fastapi-apis/laboratorio/app/schemas/: __init__.py  auth.py  order.py
modulo-fastapi-apis/laboratorio/app/utils/: security.py
modulo-fastapi-apis/laboratorio/tests/: conftest.py  test_auth.py  test_orders.py
modulo-funciones-pythonic/contenido/: README.md
modulo-funciones-pythonic/laboratorio/: README.md  pyproject.toml  utilidades_pythonic.py
modulo-fundamentos-lenguaje/contenido/: README.md
modulo-fundamentos-lenguaje/laboratorio/: README.md  procesador_productos.py  productos.json  pyproject.toml
modulo-http-apis/contenido/: README.md
modulo-http-apis/laboratorio/: README.md  ejercicio1_get.py  ejercicio2_crud.py  ejercicio3_errores.py  ejercicio4_reintentos.py  ejercicio5_client.py  ejercicio6_streaming.py  pyproject.toml
modulo-libreria-estandar/contenido/: README.md
modulo-libreria-estandar/laboratorio/: README.md  procesador_ventas.py  pyproject.toml
modulo-libreria-estandar/laboratorio/data/: ventas_2024.csv
modulo-libreria-estandar/laboratorio/output/: metricas_ventas.json
modulo-objetos-modelos/contenido/: README.md
modulo-objetos-modelos/laboratorio/: README.md  pyproject.toml  sistema_pedidos.py
modulo-orm-datos/contenido/: README.md
modulo-orm-datos/laboratorio/: README.md  alembic.ini  crud.py  models.py  pyproject.toml  test_crud.py
modulo-orm-datos/laboratorio/alembic/: README  env.py
modulo-orm-datos/laboratorio/alembic/versions/: 001_initial_schema.py
modulo-testing-tdd/contenido/: README.md
modulo-testing-tdd/laboratorio/: README.md  pyproject.toml
modulo-testing-tdd/laboratorio/src/: inventory.py  notification_service.py
modulo-testing-tdd/laboratorio/tests/: conftest.py  test_hypothesis.py  test_inventory_tdd.py  test_mocking.py
modulo-tipado-calidad/contenido/: README.md
modulo-tipado-calidad/laboratorio/: .pre-commit-config.yaml  README.md  biblioteca_tipada.py  pyproject.toml
