[project]
name = "laboratorio-entorno"
version = "0.1.0"
description = "Laboratorio del módulo Entorno y Herramientas"
authors = [
    {name = "Francisco",email = "francisco@example.com"}
]
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "black (>=26.3.1,<27.0.0)",
    "isort (>=8.0.1,<9.0.0)",
    "ruff (>=0.15.10,<0.16.0)",
    "pre-commit (>=4.5.1,<5.0.0)",
    "pytest (>=9.0.3,<10.0.0)"
]

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
]
ignore = []
