[tool.poetry]
name = "modulo-http-apis"
version = "1.0.0"
description = "Laboratorio de HTTP y consumo de APIs"
authors = ["Francisco Math"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
httpx = "^0.27.0"
tqdm = "^4.66.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.8.4"
black = "^26.3.0"
isort = "^8.0.0"
mypy = "^1.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 88

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["UP047"]  # Permitir TypeVar en lugar de type parameters por claridad

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
